# tk-widget-wrappers

./: .gitignore  pyproject.toml
src/: graph_widget.py  hideable_widget.py  light_indicator_widget.py  responsive_button.py  run_test_widget.py  spin_data_graph_widget.py  tabs_widget.py  test_grid.py  test_step_row.py  ui_events.py  widget_wrapper.py
src/tests/: test_test_step_row.py  test_widget_wrapper.py
src/widget_wrappers/: hideable_widget.py  light_indicator_widget.py  responsive_button.py  run_test_widget.py  spin_data_graph_widget.py  tabs_widget.py  test_grid.py  test_step_row.py  ui_events.py  widget_wrapper.py
src/widget_wrappers/tests/: test_test_step_row.py  test_widget_wrapper.py
